# GladeMage_ExamProject

./: CMakeLists.txt
AllAbilities/: Berserker_Orc.cpp  Berserker_Orc.h  Fireball_Mage.cpp  Fireball_Mage.h  FrostBite_Mage.cpp  FrostBite_Mage.h  Hail_of_arrows_Archer.cpp  Hail_of_arrows_Archer.h  Powershot_Archer.cpp  Powershot_Archer.h  Protection_Orc.cpp  Protection_Orc.h  Slashing_Lunge_SwordMan.cpp  Slashing_Lunge_SwordMan.h  Strangleroot_Druid.cpp  Strangleroot_Druid.h  Sword_Lunge_SwordMan.cpp  Sword_Lunge_SwordMan.h  Wild_Shape_Druid.cpp  Wild_Shape_Druid.h
AllHeroes/: Archer.cpp  Archer.h  Druid.cpp  Druid.h  Hero.cpp  Hero.h  Mage.cpp  Mage.h  Orc.cpp  Orc.h  SwordMan.cpp  SwordMan.h
MainGameLogic/: BattleEngine.cpp  BattleEngine.h  Constants_Game.h  Logger_Engine.cpp  Logger_Engine.h  StartGameEngine.cpp  StartGameEngine.h  main.cpp
